2010-05-19  Glenn Morris  <rgm@gnu.org>

	* s/msdos.h (ORDINARY_LINK): Move to sed2v2.inp.

	* Makefile.in (LD, YMF_PASS_LDFLAGS): Set with configure, not cpp.
	(GNULIB_VAR): Remove.
	(LIBES): Use LIB_GCC instead of GNULIB_VAR.

	* m/ibms390x.h (LINKER):
	* m/macppc.h (LINKER) [GNU_LINUX]:
	* s/aix4-2.h (ORDINARY_LINK):
	* s/cygwin.h (LINKER):
	* s/darwin.h (ORDINARY_LINK):
	* s/gnu.h (ORDINARY_LINK):
	* s/netbsd.h (LINKER):
	* s/usg5-4.h (ORDINARY_LINK):
	Move to configure.

	* s/aix4-2.h (LINKER): Remove; this file sets ORDINARY_LINK.

2010-05-18  Chong Yidong  <cyd@stupidchicken.com>

	* character.c (Fstring, Funibyte_string): Use SAFE_ALLOCA to
	prevent stack overflow if number of arguments is too large
	(Bug#6214).

2010-05-18  Juanma Barranquero  <lekktu@gmail.com>

	* charset.c (load_charset_map_from_file): Don't call close after fclose.

2010-05-18  Glenn Morris  <rgm@gnu.org>

	* s/gnu-linux.h: Combine two conditionals.

	* Makefile.in (otherobj): Include $(VMLIMIT_OBJ) separately from
	$(POST_ALLOC_OBJ).

	* Makefile.in (RALLOC_OBJ): New, set by configure.
	(rallocobj): Replace with the previous variable.
	(otherobj): Use $RALLOC_OBJ.

	* s/gnu.h (REL_ALLOC) [DOUG_LEA_MALLOC]:
	* s/gnu-linux.h (REL_ALLOC) [DOUG_LEA_MALLOC]: Move undef to configure.

	* Makefile.in (GMALLOC_OBJ, VMLIMIT_OBJ): New, set by configure.
	(gmallocobj, vmlimitobj): Replace with previous two variables.
	(otherobj): Use $GMALLOC_OBJ, $VMLIMIT_OBJ.

2010-05-17  Glenn Morris  <rgm@gnu.org>

	* Makefile.in (OLDXMENU_DEPS): New, set by configure.
	(stamp-oldxmenu): Use $OLDXMENU_DEPS.

2010-05-16  Glenn Morris  <rgm@gnu.org>

	* Makefile.in (${ns_appbindir}Emacs, ns-app): Always define these rules.

	* Makefile.in (clean): Get rid of HAVE_NS conditional.

	* Makefile.in (ns_appdir, ns_appbindir): Now configure adds the
	trailing "/".

	* Makefile.in (TEMACS_LDFLAGS2): New, set by configure.
	(temacs${EXEEXT}): Combine the NS_IMPL_GNUSTEP case with the default.
